--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#products">Products </a></li>
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#services">Services</a></li>
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#faqs">FAQs </a></li>
-              <li class="nav-item px-2"><a class="nav-link fw-bold" href="#hotarea">Massage area </a></li>
+              <li class="nav-item px-2"><a class="nav-link fw-bold" href="#maparea">Map </a></li>
             </ul>
           </div>
         </div>
@@ -83,6 +83,12 @@
             </div>
           </div>
         </div>
+
+
+         <!-- ===============================================-->
+    <!--    slide show-->
+    <!-- ===============================================-->
+
         <div class="container-fluid">
           <div class="row gx-2">
             <div class="col-12">
@@ -163,6 +169,10 @@
       <!-- ============================================-->
 
 
+
+       <!-- Testimonial start ============================-->
+      <!-- ============================================-->
+<!-- 
       <section class="pb-7 pt-5" id="testimonial">
         <div class="container-xxl">
           <div class="row flex-center h-100">
@@ -216,8 +226,9 @@
             </div>
           </div>
         </div>
-      </section>
-
+      </section> -->
+ <!-- Testimonial close ============================-->
+      <!-- ============================================-->
 
       <!-- ============================================-->
  
@@ -238,23 +249,23 @@
                 <button class="nav-link" id="nav-cosmetics-tab" data-bs-toggle="tab" data-bs-target="#nav-cosmetics" type="button" role="tab" aria-controls="nav-cosmetics" aria-selected="false">Cosmetics</button>
                 <button class="nav-link" id="nav-phone-tab" data-bs-toggle="tab" data-bs-target="#nav-phone" type="button" role="tab" aria-controls="nav-phone" aria-selected="false">Phone</button>
                 <button class="nav-link" id="nav-camera-tab" data-bs-toggle="tab" data-bs-target="#nav-camera" type="button" role="tab" aria-controls="nav-camera" aria-selected="false">Camera</button>
-                <button class="nav-link" id="nav-massage-tab" data-bs-toggle="tab" data-bs-target="#nav-massage" type="button" role="tab" aria-controls="nav-massage" aria-selected="false">Massage</button>
+                <button class="nav-link" id="nav-massage-tab" data-bs-toggle="tab" data-bs-target="#nav-massage" type="button" role="tab" aria-controls="nav-massage" aria-selected="false">Vendors</button>
               </div>
             </div>
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="nav-food" role="tabpanel" aria-labelledby="nav-food-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/pizzaaa.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/carrefour_logo.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/coop.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/Burger-1.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
@@ -267,10 +278,10 @@
               <div class="tab-pane fade" id="nav-shoes" role="tabpanel" aria-labelledby="nav-shoes-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/fancy-shoes1.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/nike-LV.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/fancy-shoes2.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/nike-green.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
@@ -279,7 +290,7 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/newbalance.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-2.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/jordan-yellow.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
@@ -398,8 +409,8 @@
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-1.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
                         <div class="mytext">
-                          <h3>Ariana</h3>
-                          <h3>3534276639</h3>
+                          <h3>Vendor3</h3>
+                          <h3>345345345345</h3>
                       </div>
                     </div>
                   </div>
@@ -409,8 +420,8 @@
                         <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-2.jpeg" /></div>
                         <div class="verified-avatar-icon">✓</div>
                         <div class="mytext">
-                          <h3>Moris</h3>
-                          <h3>3980982335</h3>
+                          <h3>Vendor1</h3>
+                          <h3>234234234</h3>
                       </div>
                     </div>
                   </div>
@@ -419,8 +430,8 @@
                     <div class="mybox">
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-3.jpeg" /></div>
                       <div class="mytext">
-                        <h3>Lori</h3>
-                        <h3>3468548605</h3>
+                        <h3>Vendor2</h3>
+                        <h3>345345345345</h3>
                     </div>
                   </div>
                 </div>
@@ -484,8 +495,8 @@
 
 
       <!-- ============================================-->
-      <!-- <section> begin ============================-->
-      <section class="bg-light py-5" id="services">
+      <!-- Services begin ============================-->
+<!--       <section class="bg-light py-5" id="services">
 
         <div class="container">
           <div class="row">
@@ -515,10 +526,10 @@
               </div>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
 
-      </section>
-      <!-- <section> close ============================-->
+      </section> -->
+      <!-- Services close ============================-->
       <!-- ============================================-->
 
 
@@ -526,7 +537,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section id="faqs">
+<!--       <section id="faqs">
 
         <div class="container">
           <div class="row">
@@ -550,9 +561,9 @@
               </div>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
 
-      </section>
+      </section> -->
       <!-- <section> close  FAQ ============================-->
       <!-- ============================================-->
 
@@ -562,7 +573,7 @@
       <!-- ============================================-->
       <!-- Map begin ============================-->
 
-      <section id="hotarea" class="py-0">
+      <section id="maparea" class="py-0">
 
         <div class="container">
           <div class="bg-holder z-index--1 rounded-3" style="background-image:url(assets/img/gallery/cta-bg.png);background-position:center;background-size:cover;">
