reestaurant and burger

--- a/index.html
+++ b/index.html
@@ -167,67 +167,6 @@
       </section>
       <!-- <section> close ============================-->
       <!-- ============================================-->
-
-
-
-       <!-- Testimonial start ============================-->
-      <!-- ============================================-->
-<!-- 
-      <section class="pb-7 pt-5" id="testimonial">
-        <div class="container-xxl">
-          <div class="row flex-center h-100">
-            <div class="col-12">
-              <div class="carousel slide" id="carouselTestimonials" data-bs-ride="carousel">
-                <div class="carousel-inner ps-sm-4 ps-md-4 pb-5 pb-md-2 pb-lg-0">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <div class="row h-100 align-items-center justify-content-around">
-                      <div class="col-md-4 col-lg-5 col-xl-4 text-center order-1 d-none d-md-block">
-                        <div class="wrapper square shadow-square-top">
-                          <div class="h-100"><img class="rounded-3 mt-4" src="assets/img/gallery/testimonial1.png" alt="testimonials" width="325" /></div>
-                        </div>
-                      </div>
-                      <div class="col-md-4 col-lg-5 col-xl-6 d-block d-md-none order-1"><img class="rounded-pill" src="assets/img/gallery/testimonial1.png" alt="testimonials" width="100" /></div>
-                      <div class="col-md-6 col-lg-6 col-xl-5 mb-4"><img class="img-fluid" src="assets/img/gallery/quotation.png" alt="testimonials-bg" />
-                        <h2 class="my-5">When it comes to both reliability and quality, <span class="text-primary">PDS</span> is undoubtly one of best services out there. Team was fast and responsible. 5 stars for them!</h2>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="5000">
-                    <div class="row h-100 align-items-center justify-content-around">
-                      <div class="col-md-4 col-lg-5 col-xl-4 text-center order-1 d-none d-md-block">
-                        <div class="wrapper square shadow-square-top">
-                          <div class="h-100"><img class="rounded-3 mt-4" src="assets/img/gallery/testimonial2.png" alt="testimonials" width="325" /></div>
-                        </div>
-                      </div>
-                      <div class="col-md-4 col-lg-5 col-xl-6 d-block d-md-none order-1"><img class="rounded-pill" src="assets/img/gallery/testimonial2.png" alt="testimonials" width="100" /></div>
-                      <div class="col-md-6 col-lg-6 col-xl-5 mb-4"><img class="img-fluid" src="assets/img/gallery/quotation.png" alt="testimonials-bg" />
-                        <h2 class="my-5">The team helped me. I had problem with the size but they took care of it right away.</h2>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="3000">
-                    <div class="row h-100 align-items-center justify-content-around">
-                      <div class="col-md-4 col-lg-5 col-xl-4 text-center order-1 d-none d-md-block">
-                        <div class="wrapper square shadow-square-top">
-                          <div class="h-100"><img class="rounded-3 mt-4" src="assets/img/gallery/testimonial3.png" alt="testimonials" width="325" /></div>
-                        </div>
-                      </div>
-                      <div class="col-md-4 col-lg-5 col-xl-6 d-block d-md-none order-1"><img class="rounded-pill" src="assets/img/gallery/testimonial3.png" alt="testimonials" width="100" /></div>
-                      <div class="col-md-6 col-lg-6 col-xl-5 mb-4"><img class="img-fluid" src="assets/img/gallery/quotation.png" alt="testimonials-bg" />
-                        <h2 class="my-5">I started using PDS during my pregnacy period and they helped a lot with grocery,driving,shopping. Thank you PDS.</h2>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row flex-center ps-5 ps-md-6 ps-lg-7">
-                  <div class="col-12 position-relative"><a class="carousel-control-prev carousel-icon z-index-2" href="#carouselTestimonials" style="left:-1.9rem;" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next carousel-icon z-index-2" href="#carouselTestimonials" role="button" data-bs-slide="next" style="right:auto;"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
- <!-- Testimonial close ============================-->
       <!-- ============================================-->
 
       <!-- ============================================-->
@@ -256,7 +195,7 @@
               <div class="tab-pane fade show active" id="nav-food" role="tabpanel" aria-labelledby="nav-food-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/pizzaaa.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/pizzaaa.jpeg" alt="..." /><a class="stretched-link" href="Pages/pizza-kebab.html"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/carrefour_logo.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
@@ -265,7 +204,7 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/coop.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/Burger-1.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/Burger-1.jpeg" alt="..." /><a class="stretched-link" href="Pages/burger.html"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
