nota per consegna

--- a/Pages/burger.html
+++ b/Pages/burger.html
@@ -43,7 +43,7 @@
 <section class="some-related-articles">
   <h1>Offerta</h1>
  <!--  <p>Ogni 2 pizze una lattina in omaggio.</p>-->
-  <p>Consegna gratuita da 13€. Altrementi 2€</p>
+  <p>Consegna 2€. Gratuita a partire da 13€</p>
   
   <!-- first part of the menu  -->
   
