--- a/Pages/pizza-kebab.html
+++ b/Pages/pizza-kebab.html
@@ -42,7 +42,7 @@
 <section class="some-related-articles">
   <h1>Offerta</h1>
   <p>Ogni 2 pizze una lattina in omaggio.</p>
-  <p>Consegna gratuita da 8€.</p>
+  <p>Consegna 2€, Gratuita a partire da 8€ </p>
   
   <!-- first part of the menu  -->
   
