samsung and phones numbers

--- a/Pages/pizza-kebab.html
+++ b/Pages/pizza-kebab.html
@@ -35,7 +35,7 @@
 <section class="content">
   <div class="description">
     <h1>Pizza and Kebab</h1>
-    <p class="summary">ATTENZIONE : Se hai un'allergia o un'intolleranza alimentare (o se una persona per la quale stai effettuando un ordine ne ha), telefona immediatamente a questo numero 000000. Non effettuare l'ordine se non riesci a ottenere le informazioni di cui hai bisogno.)</p>
+    <p class="summary">ATTENZIONE : Se hai un'allergia o un'intolleranza alimentare (o se una persona per la quale stai effettuando un ordine ne ha), contatta immediatamente PDS. Non effettuare l'ordine se non riesci a ottenere le informazioni di cui hai bisogno.)</p>
 
   </div>
 </section>
