--- a/index.html
+++ b/index.html
@@ -251,20 +251,20 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-2.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/samsung.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
+<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
+                  </div> -->
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
+<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-6.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="tab-pane fade" id="nav-cosmetics" role="tabpanel" aria-labelledby="nav-cosmetics-tab">
@@ -349,7 +349,7 @@
                         <div class="verified-avatar-icon">✓</div>
                         <div class="mytext">
                           <h3>Vendor3</h3>
-                          <h3>345345345345</h3>
+                          <h3>*****</h3>
                       </div>
                     </div>
                   </div>
@@ -360,7 +360,7 @@
                         <div class="verified-avatar-icon">✓</div>
                         <div class="mytext">
                           <h3>Vendor1</h3>
-                          <h3>234234234</h3>
+                          <h3>*****/h3>
                       </div>
                     </div>
                   </div>
@@ -370,7 +370,7 @@
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-3.jpeg" /></div>
                       <div class="mytext">
                         <h3>Vendor2</h3>
-                        <h3>345345345345</h3>
+                        <h3>***</h3>
                     </div>
                   </div>
                 </div>
