--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <button class="nav-link active" id="nav-food-tab" data-bs-toggle="tab" data-bs-target="#nav-food" type="button" role="tab" aria-controls="nav-food" aria-selected="true">Food</button>
                 <button class="nav-link" id="nav-shoes-tab" data-bs-toggle="tab" data-bs-target="#nav-shoes" type="button" role="tab" aria-controls="nav-shoes" aria-selected="false">Shoes</button>
                 <button class="nav-link" id="nav-watches-tab" data-bs-toggle="tab" data-bs-target="#nav-watches" type="button" role="tab" aria-controls="nav-watches" aria-selected="false">Watches</button>
-                <button class="nav-link" id="nav-cosmetics-tab" data-bs-toggle="tab" data-bs-target="#nav-cosmetics" type="button" role="tab" aria-controls="nav-cosmetics" aria-selected="false">Cosmetics</button>
+                <button class="nav-link" id="cars-tab" data-bs-toggle="tab" data-bs-target="#cars" type="button" role="tab" aria-controls="cars" aria-selected="false">Cars</button>
                 <button class="nav-link" id="nav-phone-tab" data-bs-toggle="tab" data-bs-target="#nav-phone" type="button" role="tab" aria-controls="nav-phone" aria-selected="false">Phone</button>
                 <button class="nav-link" id="nav-camera-tab" data-bs-toggle="tab" data-bs-target="#nav-camera" type="button" role="tab" aria-controls="nav-camera" aria-selected="false">Camera</button>
                 <button class="nav-link" id="nav-massage-tab" data-bs-toggle="tab" data-bs-target="#nav-massage" type="button" role="tab" aria-controls="nav-massage" aria-selected="false">Vendors</button>
@@ -253,39 +253,30 @@
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/samsung.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
-<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div> -->
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
-<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/watch-6.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div> -->
                 </div>
               </div>
-              <div class="tab-pane fade" id="nav-cosmetics" role="tabpanel" aria-labelledby="nav-cosmetics-tab">
+              <div class="tab-pane fade" id="cars" role="tabpanel" aria-labelledby="cars-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/cosmetics-1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/cosmetics-2.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car2.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/cosmetics-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/cosmetics-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/cosmetics-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/cosmetics-6.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car6.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                 </div>
               </div>
