--- a/index.html
+++ b/index.html
@@ -206,22 +206,22 @@
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/Burger-1.jpeg" alt="..." /><a class="stretched-link" href="Pages/burger.html"></a></div>
                   </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
+<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/food-6.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="tab-pane fade" id="nav-shoes" role="tabpanel" aria-labelledby="nav-shoes-tab">
                 <div class="row gx-3">
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
+<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/nike-LV.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/nike-green.jpeg" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
+                  </div> -->
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-1.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
@@ -234,9 +234,9 @@
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-3.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
+<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-4.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
+                  </div> -->
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/shoes-11.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
