--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="mybox">
                       <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/lady-3.jpeg" /></div>
+                      <div class="verified-avatar-icon-green">✓</div>
                       <div class="mytext">
                         <h3>Vendor2</h3>
                         <h3>***</h3>
@@ -397,6 +398,22 @@
               top: 0;
               border-radius: 50%;
               background: rgb(255, 8, 0);
+              width: 30px;
+              height: 30px;
+              display: grid;
+              text-align: center;
+              line-height: 25px;
+              color: white;
+              font-size: 30px;
+              font-weight: bolder;
+            }
+
+            .verified-avatar-icon-green {
+              position: absolute;
+              right: 0;
+              top: 0;
+              border-radius: 50%;
+              background: rgb(0, 255, 55);
               width: 30px;
               height: 30px;
               display: grid;
