--- a/Pages/pizza-kebab.html
+++ b/Pages/pizza-kebab.html
@@ -21,7 +21,7 @@
 
 <nav class="fixed-nav-bar">
   <div id="menu" class="menu">
-    <a class="sitename" href="pizza-kebab.html">Pizza-Kebab</a>
+    <a class="sitename" href="/PDS/index.html">Home</a>
     <!-- Example responsive navigation menu  -->
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
