--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item px-2"><a class="nav-link fw-bold" aria-current="page" href="index.html">Home</a></li>
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#howitworks">How it works</a></li>
-              <li class="nav-item px-2"><a class="nav-link fw-bold" href="#products">Products </a></li>
+              <li class="nav-item px-2"><a class="nav-link fw-bold" href="#products">Offers </a></li>
               <li class="nav-item px-2"><a class="nav-link fw-bold" href="#maparea">Map </a></li>
             </ul>
           </div>
@@ -127,7 +127,7 @@
 
 
       <!-- ============================================-->
-      <!-- <section> begin ============================-->
+      <!-- <section> begin explaination of the service ============================-->
       <section class="py-0" id="howitworks">
 
         <div class="container">
@@ -165,29 +165,25 @@
 
       </section>
       <!-- <section> close ============================-->
-      <!-- ============================================-->
-      <!-- ============================================-->
 
-      <!-- ============================================-->
- 
       <!-- ============================================-->
 
       <section id="products">
         <div class="container">
           <div class="row h-100">
             <div class="col-lg-7 mx-auto text-center mb-6">
-              <h1 class="text-center lh-sm fs-lg-6 fs-xxl-7">Over 1,000,000 Products</h1>
+              <h1 class="text-center lh-sm fs-lg-6 fs-xxl-7">Offers</h1>
             </div>
             <div class="col-12">
               <nav></nav>
               <div class="nav nav-tabs clickr-tabs mb-6 justify-content-center" id="nav-tab" role="tablist">
                 <button class="nav-link active" id="nav-food-tab" data-bs-toggle="tab" data-bs-target="#nav-food" type="button" role="tab" aria-controls="nav-food" aria-selected="true">Food</button>
                 <button class="nav-link" id="nav-shoes-tab" data-bs-toggle="tab" data-bs-target="#nav-shoes" type="button" role="tab" aria-controls="nav-shoes" aria-selected="false">Shoes</button>
-                <button class="nav-link" id="nav-watches-tab" data-bs-toggle="tab" data-bs-target="#nav-watches" type="button" role="tab" aria-controls="nav-watches" aria-selected="false">Watches</button>
+      <!--           <button class="nav-link" id="nav-watches-tab" data-bs-toggle="tab" data-bs-target="#nav-watches" type="button" role="tab" aria-controls="nav-watches" aria-selected="false">Watches</button> -->
                 <button class="nav-link" id="cars-tab" data-bs-toggle="tab" data-bs-target="#cars" type="button" role="tab" aria-controls="cars" aria-selected="false">Cars</button>
-                <button class="nav-link" id="nav-phone-tab" data-bs-toggle="tab" data-bs-target="#nav-phone" type="button" role="tab" aria-controls="nav-phone" aria-selected="false">Phone</button>
-                <button class="nav-link" id="nav-camera-tab" data-bs-toggle="tab" data-bs-target="#nav-camera" type="button" role="tab" aria-controls="nav-camera" aria-selected="false">Camera</button>
-                <button class="nav-link" id="nav-massage-tab" data-bs-toggle="tab" data-bs-target="#nav-massage" type="button" role="tab" aria-controls="nav-massage" aria-selected="false">Vendors</button>
+<!--                 <button class="nav-link" id="nav-phone-tab" data-bs-toggle="tab" data-bs-target="#nav-phone" type="button" role="tab" aria-controls="nav-phone" aria-selected="false">Phone</button>
+                <button class="nav-link" id="nav-camera-tab" data-bs-toggle="tab" data-bs-target="#nav-camera" type="button" role="tab" aria-controls="nav-camera" aria-selected="false">Camera</button> -->
+                <button class="nav-link" id="nav-massage-tab" data-bs-toggle="tab" data-bs-target="#nav-massage" type="button" role="tab" aria-controls="nav-massage" aria-selected="false">Others</button>
               </div>
             </div>
             <div class="tab-content" id="nav-tabContent">
@@ -197,14 +193,15 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/pizzaaa.jpeg" alt="..." /><a class="stretched-link" href="Pages/pizza-kebab.html"></a></div>
                   </div>
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/carrefour_logo.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/coop.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
-                  </div>
-                  <div class="col-sm-6 col-md-4 mb-3 h-100">
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/Burger-1.jpeg" alt="..." /><a class="stretched-link" href="Pages/burger.html"></a></div>
                   </div>
+                  <div class="col-sm-6 col-md-4 mb-3 h-100">
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/carrefour_logo.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                  </div>
+<!--                   <div class="col-sm-6 col-md-4 mb-3 h-100">
+                    <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/coop.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
+                  </div> -->
+
                 </div>
               </div>
               <div class="tab-pane fade" id="nav-shoes" role="tabpanel" aria-labelledby="nav-shoes-tab">
@@ -245,32 +242,37 @@
               <div class="tab-pane fade" id="cars" role="tabpanel" aria-labelledby="cars-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
-                    <!-- ===================slide show=========================-->
+                    <!-- ===================slide show car =========================-->
                     <div class="slideshow-container">
                            <div class="mySlides fade">
                              <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car1.png"/></div>
-                             <div class="text">1 / 6</div>
+                             <div class="text">1 / 7</div>
                            </div>
                            <div class="mySlides fade">
                              <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car2.png"/></div>
-                             <div class="text">2 / 6</div>
+                             <div class="text">2 / 7</div>
                            </div>
                            <div class="mySlides fade">
                              <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car3.png" /></div>
-                             <div class="text">3 / 6</div>
+                             <div class="text">3 / 7</div>
                            </div>
                             <div class="mySlides fade">
                               <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car4.png" /></div>
-                              <div class="text">4 / 6</div>
+                              <div class="text">4 / 7</div>
                             </div>
                             <div class="mySlides fade">
                              <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car5.png" /></div>
-                             <div class="text">5 / 6</div>
+                             <div class="text">5 / 7</div>
                             </div>
                            <div class="mySlides fade">
                             <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/car6.png" /></div>
-                            <div class="text">6 / 6</div>
+                            <div class="text">6 / 7</div>
                           </div>
+                          <div class="mySlides fade">
+                            <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/infocar.png" /></div>
+                            <div class="text">7 / 7</div>
+                          </div>
+
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
@@ -280,7 +282,7 @@
 
                 </div>
               </div>
-
+<!-- 
               <div class="tab-pane fade" id="nav-phone" role="tabpanel" aria-labelledby="nav-phone-tab">
                 <div class="row gx-3">
                   <div class="col-sm-6 col-md-4 mb-3 h-100">
@@ -310,7 +312,7 @@
                     <div class="card card-span h-100 text-white"><img class="rounded-3 h-100" src="assets/img/gallery/camera-5.png" alt="..." /><a class="stretched-link" href="#!"></a></div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
                 <!-- ============================================-->
                 <script>
@@ -342,7 +344,7 @@
                   }
                   </script>
 
-      <!-- ==========================      Vendor AREA          ==================-->
+      <!-- ==========================      Vendor AREA-massage          ==================-->
 
               <div class="tab-pane fade" id="nav-massage" role="tabpanel" aria-labelledby="nav-massage-tab">
                 <div class="row gx-3">
@@ -495,7 +497,7 @@
       
 
       <!-- ============================================-->
-      <!-- <section> begin ============================-->
+      <!-- <section> footer ============================-->
       <section class="py-0 pt-7">
 
         <div class="container">
